--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "version": "1.0",
     "description": "Adds a map win graph in the faceit match room",
     "icons": {
-        "48": "icons/cs2.png"
+        "48": "src/icons/cs2.png"
     },
     "content_scripts": [
         {
@@ -12,11 +12,11 @@
                 "<all_urls>"
             ],
             "js": [
-                "faceit_map_graph.js"
+                "src/faceit_map_graph.js"
             ]
         }
     ],
     "action": {
-        "default_popup": "popup.html"
+        "default_popup": "src/popups/popup.html"
     }
 }
