Co-authored-by: SamSmith2004 <SamSmith2004@users.noreply.github.com>
added functions to get faceit matches

--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
                 "<all_urls>"
             ],
             "js": [
-                "src/faceit_map_graph.js"
+                "src/scripts/faceit_map_graph.js"
             ]
         }
     ],
