--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "main": "src/scripts/faceit_map_graph.js",
+  "type": "module",
+  "scripts": {
+    "start": "node src/scripts/faceit_map_graph.js"
+  },
   "dependencies": {
     "axios": "^1.7.7",
     "dotenv": "^16.4.5"
