--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "main": "src/scripts/faceit_map_graph.js",
   "type": "module",
   "scripts": {
-    "start": "node src/scripts/faceit_map_graph.js"
+    "start": "node src/scripts/faceit_map_graph.js",
+    "dev": "node src/scripts/fetchStats.js"
   },
   "dependencies": {
     "axios": "^1.7.7",
