--- a/manifest.json
+++ b/manifest.json
@@ -18,5 +18,8 @@
     ],
     "action": {
         "default_popup": "src/popups/popup.html"
+    },
+    "content_security_policy": {
+        "extension_pages": "script-src 'self'; object-src 'self'"
     }
 }
